syntax = "proto3";

service ActivityService {

}

